@@ -140,7 +140,7 @@ public class EnumerableAlgImplementor extends JavaAlgImplementor {
         if ( contextCounter < 0 ) {
             // If the context was not set by ContextSwitcher we only need the initial one
             Statement assign = Expressions.declare( Modifier.FINAL, DataContext.ROOT, DataContext.INITIAL_ROOT );
-            block = Expressions.block( Stream.concat( Stream.of( assign ), block.statements.stream() ).collect( Collectors.toList() ) );
+            block = Expressions.block( Stream.concat( Stream.of( assign ), block.statements.stream() ).toList() );
         }
 
         // add values
