@@ -48,7 +48,7 @@ public class RelationalMetaRetriever {
     public static List<ParameterMeta> retrieveParameterMetas( AlgDataType parameterRowType ) {
         return parameterRowType.getFields().stream()
                 .map( p -> retrieveParameterMeta( p, null ) )
-                .collect( Collectors.toList() );
+                .toList();
     }
 
 
@@ -150,7 +150,7 @@ public class RelationalMetaRetriever {
                         .getFields()
                         .stream()
                         .map( f -> retrieveFieldMeta( f.getIndex(), f.getName(), f.getType() ) )
-                        .collect( Collectors.toList() );
+                        .toList();
                 return TypeMeta.newBuilder()
                         .setStructMeta( StructMeta.newBuilder().addAllFieldMetas( fieldMetas ).build() )
                         //.setProtoValueType( ProtoValueType.PROTO_VALUE_TYPE_STRUCTURED )
