@@ -503,7 +503,7 @@ public class SqlTypeUtil {
 
 
     private static List<AlgDataType> toSql( final AlgDataTypeFactory typeFactory, List<AlgDataType> types ) {
-        return types.stream().map( type -> toSql( typeFactory, type ) ).collect( Collectors.toList() );
+        return types.stream().map( type -> toSql( typeFactory, type ) ).toList();
     }
 
 
